--- a/charts/sequencer-relayer/values.yaml
+++ b/charts/sequencer-relayer/values.yaml
@@ -21,6 +21,7 @@ config:
     celestiaAppGrpc: ""
     cometbftRpc: ""
     sequencerGrpc: ""
+    onlyIncludeRollups: ""
 
     metrics:
       enabled: false
