--- a/crates/astria-sequencer-relayer/Cargo.toml
+++ b/crates/astria-sequencer-relayer/Cargo.toml
@@ -31,6 +31,7 @@ futures = { workspace = true }
 hex = { workspace = true, features = ["serde"] }
 humantime = { workspace = true }
 hyper = { workspace = true }
+itertools = { workspace = true }
 itoa = { workspace = true }
 metrics = { workspace = true }
 pbjson-types = { workspace = true }
