--- a/crates/astria-sequencer-relayer/local.env.example
+++ b/crates/astria-sequencer-relayer/local.env.example
@@ -45,6 +45,15 @@ ASTRIA_SEQUENCER_RELAYER_BLOCK_TIME=1000
 # Set to true to only relay blocks proposed by the validator key in `ASTRIA_SEQUENCER_RELAYER_VALIDATOR_KEY_FILE`.
 ASTRIA_SEQUENCER_RELAYER_RELAY_ONLY_VALIDATOR_KEY_BLOCKS=false
 
+# A comma-separated list of base64-encoded rollup IDs, often the sha256
+# hash of a rollup name.
+# Only data from these rollups will be submitted to Celestia.
+# If empty, no filtering will be applied, i.e. data from all
+# rollups will be submitted.
+# Example for only submitting transactions for rollups of the provided IDs:
+# ASTRIA_SEQUENCER_RELAYER_ONLY_INCLUDE_ROLLUPS=AQIDBAUGBwgJCgsMDQ4PEBESExQVFhcYGRobHB0eHyA=,IB8eHRwbGhkYFxYVFBMSERAPDg0MCwoJCAcGBQQDAgE=
+ASTRIA_SEQUENCER_RELAYER_ONLY_INCLUDE_ROLLUPS=
+
 # The path to the file storing the cometbft validator key.
 # Used to sign data before submitting it to celestia.
 # Ignored if `ASTRIA_SEQUENCER_RELAYER_RELAY_ONLY_VALIDATOR_KEY_BLOCKS=false`.
