fix stop-testnet on linux

--- a/crates/astria-sequencer/justfile
+++ b/crates/astria-sequencer/justfile
@@ -28,7 +28,8 @@ run-testnet:
 
 [linux]
 stop-testnet:
-  pkill cometbft && pkill -f astria-sequencer
+  pkill -f [a]stria-sequencer 
+  pkill cometbft
 [linux] 
 run-testnet: 
   cargo build
@@ -40,6 +41,9 @@ cometbft-logs-testnet NODE="node0":
 sequencer-logs-testnet NODE="node0":
   tail -f sequencer_testnet/{{ NODE }}/sequencer.log
 
-clean-testnet DIR="sequencer_testnet": 
+clean-testnet DIR="sequencer_testnet": stop-testnet
   rm -r {{ DIR }} || true
   rm -r /tmp/astria_db_* || true
+
+restart: 
+  ASTRIA_SEQUENCER_DB_FILEPATH=/tmp/astria_db_0 ASTRIA_SEQUENCER_LISTEN_ADDR=127.0.0.1:26660 ASTRIA_SEQUENCER_GRPC_ADDR=127.0.0.1:8080 RUST_LOG=debug RUST_BACKTRACE=1 ../../target/debug/astria-sequencer
